@@ -9,21 +9,9 @@ DEBVER=$(shell dpkg-parsechangelog |sed -n -e '/^Version:/s/^Version: //p')
 DEB_BUILD_PROG:=debuild --preserve-envvar PATH --preserve-envvar CCACHE_DIR -us -uc $(DEB_BUILD_PROG_OPTS)
 
 update-po:
-    # Build pot file for our scripts
-	@FILES=""
-	@echo -n "Updating ltsp.pot... "; \
-	for f in server/ltsp-build-client server/plugins/*/*; do \
-		FILES="$$FILES $$f"; \
-	done; \
-	xgettext --language=Shell -o po/ltsp.pot $$FILES; \
-	echo done
 
-	@echo "Merging old translations..."; \
-	(cd po; \
-	for f in *.po; do \
-		msgmerge -U $$f ltsp.pot; \
-		echo -n "$$f: "; msgfmt --statistics $$f; \
-	done)
+    # Using po specific Makefile to build message catalogs
+	$(MAKE) -C po
 
     # Debconf translation update
 	debconf-updatepo
@@ -44,6 +32,9 @@ clean:
 
 	-$(MAKE) -C client/getltscfg clean
 	-$(MAKE) -C client/lp_server distclean
+    
+    # Using po specific Makefile to clean message catalogs
+	$(MAKE) -C po update-po clean
 
 	dh_clean
 
@@ -52,6 +43,9 @@ install: build
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
+
+    # Using po specific Makefile to install message catalogs
+	$(MAKE) -C po install DESTDIR=$(CURDIR)/debian/ltsp-server/
 
 # Build architecture-independent files here.
 binary-indep: build install
